# cortex

./: Cargo.toml  README.md  test_input  test_input.rs
docs/: CONTEXT.md  CONTRIBUTING.md  Claude.md  ROADMAP.md  STATUS.md
src/: config.rs  lib.rs  main.rs  runtime.rs  session.rs
src/inference/: candle_llm.rs  embedder.rs  mod.rs
src/memory/: mod.rs  vector.rs
src/state/: checkpoint.rs  mod.rs
